I would rather see the floating heads...the other issue bothers me wayyy too much

--- a/portraits.css
+++ b/portraits.css
@@ -74,7 +74,7 @@
 	transform: translate(-50%,0);
 	max-height: 150%;
 	max-width: 150%;
-	top:0;right:0;left: 50%;
+	top:0;bottom:0;right:0;left: 50%;
 	margin: auto;
 	cursor: pointer;
 	-webkit-filter: brightness(1);
